--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
         font-family: "Manrope", sans-serif;
       }
     </style>
+    <script
+      src="https://kit.fontawesome.com/8bb45c5a0e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="container mx-auto">
       <div class="hero">
-        <div class="flex-col gap-10 hero-content lg:flex-row-reverse">
-          <img src="images/banner.png" class="rounded-lg" />
+        <div class="flex-col gap-10 hero-content lg:flex-row">
           <div>
             <h1 class="font-extrabold text-[#1C1C1C] text-7xl leading-[100px]">
               It's good <br />tea time at The <br />Tea House
@@ -64,6 +67,18 @@
                 />
               </svg>
             </button>
+          </div>
+          <div>
+            <img src="images/banner.png" class="rounded-lg" />
+            <div
+              class="relative flex items-center gap-4 p-5 bg-white shadow-xl w-60 bottom-24 left-20 rounded-xl"
+            >
+              <i class="text-4xl fa-solid fa-star text-amber-400"></i>
+              <div>
+                <h3 class="text-3xl font-bold">5.00</h3>
+                <p>Trust Pilot Ratings</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
