--- a/index.html
+++ b/index.html
@@ -84,7 +84,102 @@
       </div>
     </header>
 
-    <main></main>
+    <main class="container mx-auto">
+      <section class="my-20">
+        <h3 class="text-5xl font-extrabold text-center text-[#1C1C1C]">
+          Our Featured Products
+        </h3>
+        <p
+          class="p-2 mx-auto mt-5 text-base font-medium text-center lg:max-w-4xl"
+        >
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+
+        <div class="grid grid-cols-1 gap-4 my-12 md:grid-cols-2 lg:grid-cols-4">
+          <div class="shadow-xl card bg-base-100 p-30">
+            <figure class="px-10 pt-10">
+              <img src="images/tea-1.png" alt="Tea" class="rounded-xl" />
+            </figure>
+            <div class="items-center text-center card-body">
+              <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">
+                Milk Tea
+              </h2>
+              <p class="text-[#777] text-base font-semibold max-w-52">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <div class="shadow-xl card bg-base-100 p-30">
+            <figure class="px-10 pt-10">
+              <img src="images/tea-2.png" alt="Tea" class="rounded-xl" />
+            </figure>
+            <div class="items-center text-center card-body">
+              <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">
+                Black Tea
+              </h2>
+              <p class="text-[#777] text-base font-semibold max-w-52">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <div class="shadow-xl card bg-base-100 p-30">
+            <figure class="px-10 pt-10">
+              <img src="images/tea-3.png" alt="Tea" class="rounded-xl" />
+            </figure>
+            <div class="items-center text-center card-body">
+              <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">
+                Lemon Tea
+              </h2>
+              <p class="text-[#777] text-base font-semibold max-w-52">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+          <div class="shadow-xl card bg-base-100 p-30">
+            <figure class="px-10 pt-10">
+              <img src="images/tea-4.png" alt="Tea" class="rounded-xl" />
+            </figure>
+            <div class="items-center text-center card-body">
+              <h2 class="card-title text-[#1C1C1C] text-2xl font-extrabold">
+                Green Tea
+              </h2>
+              <p class="text-[#777] text-base font-semibold max-w-52">
+                Creamer could be replaced by fresh milk
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="my-20">
+        <div></div>
+        <div>
+          <h3 class="text-5xl font-extrabold text-[#1C1C1C]">
+            Great Tea, Freshly <br />Presented
+          </h3>
+          <p class="text-base text-[#777] font-medium">
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
+          </p>
+
+          <h3 class="text-xl text-[#1C1C1C] font-extrabold">Unique Taste</h3>
+          <p class="text-base text-[#777] font-medium">
+            A Unique and different style from other teapots gives a luxurious
+            and minimalist impression
+          </p>
+          <h3 class="text-xl text-[#1C1C1C] font-extrabold">Premium Quality</h3>
+          <p class="text-base text-[#777] font-medium">
+            Premium Quality that makes tea more elegant and more durable when
+            you use it.
+          </p>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
