--- a/index.html
+++ b/index.html
@@ -154,8 +154,11 @@
       </section>
 
       <section class="my-20">
-        <div></div>
         <div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="space-y-5">
           <h3 class="text-5xl font-extrabold text-[#1C1C1C]">
             Great Tea, Freshly <br />Presented
           </h3>
