--- a/index.html
+++ b/index.html
@@ -153,12 +153,14 @@
         </div>
       </section>
 
-      <section class="my-20">
-        <div>
+      <section class="flex flex-col gap-10 my-20 lg:flex-row">
+        <div class="grid flex-1 grid-cols-1 gap-4 md:grid-cols-2">
           <div></div>
+          <div class="row-span-2"><img src="images/fresh-1.png" alt="" /></div>
+          <div class="row-span-2"><img src="images/fresh-2.png" alt="" /></div>
           <div></div>
         </div>
-        <div class="space-y-5">
+        <div class="flex-1 space-y-5">
           <h3 class="text-5xl font-extrabold text-[#1C1C1C]">
             Great Tea, Freshly <br />Presented
           </h3>
