--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     </header>
 
     <main class="container mx-auto">
+      <!-- Featured-Products-Section -->
       <section class="my-20">
         <h3 class="text-5xl font-extrabold text-center text-[#1C1C1C]">
           Our Featured Products
@@ -153,14 +154,26 @@
         </div>
       </section>
 
-      <section class="flex flex-col gap-10 my-20 lg:flex-row">
+      <!-- Great-Tea-Section  -->
+
+      <section class="flex flex-col gap-12 p-5 my-20 lg:flex-row">
         <div class="grid flex-1 grid-cols-1 gap-4 md:grid-cols-2">
-          <div></div>
-          <div class="row-span-2"><img src="images/fresh-1.png" alt="" /></div>
-          <div class="row-span-2"><img src="images/fresh-2.png" alt="" /></div>
-          <div></div>
+          <div
+            class="rounded-xl bg-gradient-to-r from-[#F00] to-[#FF8938] opacity-10 h-36"
+          ></div>
+          <div
+            class="row-span-2 rounded-xl bg-[#E6A62319] flex justify-center items-center px-8 py-12"
+          >
+            <img src="images/fresh-1.png" alt="" />
+          </div>
+          <div
+            class="row-span-2 rounded-xl bg-[#5776391A] flex justify-center items-center px-8 py-12"
+          >
+            <img src="images/fresh-2.png" alt="" />
+          </div>
+          <div class="rounded-xl bg-[#5776391A] h-36"></div>
         </div>
-        <div class="flex-1 space-y-5">
+        <div class="flex-1 space-y-7">
           <h3 class="text-5xl font-extrabold text-[#1C1C1C]">
             Great Tea, Freshly <br />Presented
           </h3>
@@ -184,6 +197,8 @@
           </p>
         </div>
       </section>
+
+      <section class="my-20"></section>
     </main>
 
     <footer></footer>
