review card and image

--- a/index.html
+++ b/index.html
@@ -198,7 +198,40 @@
         </div>
       </section>
 
-      <section class="my-20"></section>
+      <section
+        class="flex flex-col gap-5 my-20 md:flex-row lg:flex-row bg-gradient-to-r from-[#F00] to-[#FF8938] px-16 py-24 rounded-lg"
+      >
+        <div class="flex-1 space-y-5">
+          <h3 class="text-5xl font-extrabold">Meet Our Super<br />Clients</h3>
+          <p class="text-base font-medium">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+          <button
+            class="btn bg-gradient-to-l from-[#F00] to-[#FF8938] text-white"
+            type="button"
+          >
+            Show All
+          </button>
+        </div>
+        <div class="flex-1">
+          <div class="relative p-5 rounded-lg bg-base-100">
+            <img
+              class="absolute rounded-full shadow-md -top-10 -left-6"
+              src="images/client.png"
+              alt=""
+            />
+            <p class="text-base">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <h4>Ilham Yuda</h4>
+            <p>Businessman</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
