--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
               </svg>
             </button>
           </div>
-          <div>
+          <div class="relative">
             <img src="images/banner.png" class="rounded-lg" />
             <div
-              class="relative flex items-center gap-4 p-5 bg-white shadow-xl w-60 bottom-24 left-20 rounded-xl"
+              class="absolute flex items-center gap-4 p-5 bg-white shadow-xl w-60 bottom-3 left-28 rounded-xl"
             >
               <i class="text-4xl fa-solid fa-star text-amber-400"></i>
               <div>
@@ -201,7 +201,7 @@
       <section
         class="flex flex-col gap-5 my-20 md:flex-row lg:flex-row bg-gradient-to-r from-[#F00] to-[#FF8938] px-16 py-24 rounded-lg"
       >
-        <div class="flex-1 space-y-5">
+        <div class="space-y-5">
           <h3 class="text-5xl font-extrabold">Meet Our Super<br />Clients</h3>
           <p class="text-base font-medium">
             There are many variations of passages of Lorem Ipsum available, but
@@ -216,10 +216,10 @@
             Show All
           </button>
         </div>
-        <div class="flex-1">
-          <div class="relative p-5 rounded-lg bg-base-100">
+        <div class="">
+          <div class="relative p-10 rounded-lg bg-base-100">
             <img
-              class="absolute rounded-full shadow-md -top-10 -left-6"
+              class="absolute bg-white border-4 rounded-full -top-10 -left-8"
               src="images/client.png"
               alt=""
             />
@@ -227,8 +227,11 @@
               We are providing the best and suitable home insurance services for
               the people who are interested to treatment
             </p>
-            <h4>Ilham Yuda</h4>
+            <h4 class="mt-5 font-bold">Ilham Yuda</h4>
             <p>Businessman</p>
+            <div class="flex justify-end">
+              <img class="absolute" src="images/circles.png" alt="" />
+            </div>
           </div>
         </div>
       </section>
