--- a/index.html
+++ b/index.html
@@ -202,8 +202,10 @@
         class="flex flex-col gap-5 my-20 md:flex-row lg:flex-row bg-gradient-to-r from-[#F00] to-[#FF8938] px-16 py-24 rounded-lg"
       >
         <div class="space-y-5">
-          <h3 class="text-5xl font-extrabold">Meet Our Super<br />Clients</h3>
-          <p class="text-base font-medium">
+          <h3 class="text-5xl font-extrabold text-white">
+            Meet Our Super<br />Clients
+          </h3>
+          <p class="text-base font-medium text-white">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even slightly
@@ -216,8 +218,42 @@
             Show All
           </button>
         </div>
-        <div class="">
-          <div class="relative p-10 rounded-lg bg-base-100">
+        <div class="relative">
+          <div class="relative p-10 mb-16 rounded-lg opacity-40 bg-base-100">
+            <img
+              class="absolute bg-white border-4 rounded-full -top-10 -left-8"
+              src="images/client.png"
+              alt=""
+            />
+            <p class="text-base">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <h4 class="mt-5 font-bold">Ilham Yuda</h4>
+            <p>Businessman</p>
+            <div class="flex justify-end">
+              <img class="absolute" src="images/circles.png" alt="" />
+            </div>
+          </div>
+          <div
+            class="absolute p-10 rounded-lg top-40 -left-40 bg-base-100 lg:w-[430px]"
+          >
+            <img
+              class="absolute bg-white border-4 rounded-full -top-10 -left-8"
+              src="images/client.png"
+              alt=""
+            />
+            <p class="text-base">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <h4 class="mt-5 font-bold">Ilham Yuda</h4>
+            <p>Businessman</p>
+            <div class="flex justify-end">
+              <img class="absolute" src="images/circles.png" alt="" />
+            </div>
+          </div>
+          <div class="relative p-10 rounded-lg opacity-40 bg-base-100">
             <img
               class="absolute bg-white border-4 rounded-full -top-10 -left-8"
               src="images/client.png"
