--- a/index.html
+++ b/index.html
@@ -219,24 +219,8 @@
           </button>
         </div>
         <div class="relative">
-          <div class="relative p-10 mb-16 rounded-lg opacity-40 bg-base-100">
-            <img
-              class="absolute bg-white border-4 rounded-full -top-10 -left-8"
-              src="images/client.png"
-              alt=""
-            />
-            <p class="text-base">
-              We are providing the best and suitable home insurance services for
-              the people who are interested to treatment
-            </p>
-            <h4 class="mt-5 font-bold">Ilham Yuda</h4>
-            <p>Businessman</p>
-            <div class="flex justify-end">
-              <img class="absolute" src="images/circles.png" alt="" />
-            </div>
-          </div>
           <div
-            class="absolute p-10 rounded-lg top-40 -left-40 bg-base-100 lg:w-[430px]"
+            class="relative z-10 p-10 rounded-lg mb-14 opacity-40 bg-base-100 lg:w-[430px] md:w-[430px]"
           >
             <img
               class="absolute bg-white border-4 rounded-full -top-10 -left-8"
@@ -253,7 +237,27 @@
               <img class="absolute" src="images/circles.png" alt="" />
             </div>
           </div>
-          <div class="relative p-10 rounded-lg opacity-40 bg-base-100">
+          <div
+            class="absolute p-10 z-20 rounded-lg top-32 lg:top-32 lg:-left-40 bg-base-100 lg:w-[430px] md:w-[430px]"
+          >
+            <img
+              class="absolute bg-white border-4 rounded-full -top-10 -left-8"
+              src="images/client.png"
+              alt=""
+            />
+            <p class="text-base">
+              We are providing the best and suitable home insurance services for
+              the people who are interested to treatment
+            </p>
+            <h4 class="mt-5 font-bold">Ilham Yuda</h4>
+            <p>Businessman</p>
+            <div class="flex justify-end">
+              <img class="absolute" src="images/circles.png" alt="" />
+            </div>
+          </div>
+          <div
+            class="relative z-10 p-10 rounded-lg opacity-40 bg-base-100 md:w-[430px] lg:w-[430px]"
+          >
             <img
               class="absolute bg-white border-4 rounded-full -top-10 -left-8"
               src="images/client.png"
