--- a/index.html
+++ b/index.html
@@ -292,6 +292,20 @@
             humour, or randomised words which don't look even slightly
             believable.
           </p>
+
+          <div>
+            <div class="shadow-xl card w-96 bg-base-100">
+              <figure><img src="images/news-1.png" alt="Shoes" /></figure>
+              <div class="card-body">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <div class="justify-end card-actions">
+                  <div class="badge badge-outline">Fashion</div>
+                  <div class="badge badge-outline">Products</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
