--- a/index.html
+++ b/index.html
@@ -293,15 +293,58 @@
             believable.
           </p>
 
-          <div>
-            <div class="shadow-xl card w-96 bg-base-100">
-              <figure><img src="images/news-1.png" alt="Shoes" /></figure>
+          <div class="flex flex-col justify-between gap-6 my-20 lg:flex-row">
+            <div class="shadow-xl card bg-base-100">
+              <figure>
+                <img class="w-full p-5" src="images/news-1.png" alt="Shoes" />
+              </figure>
               <div class="card-body">
-                <h2 class="card-title">Shoes!</h2>
-                <p>If a dog chews shoes whose shoes does he choose?</p>
-                <div class="justify-end card-actions">
-                  <div class="badge badge-outline">Fashion</div>
-                  <div class="badge badge-outline">Products</div>
+                <p>Feb 05, 2027</p>
+                <h2 class="text-xl font-extrabold card-title">
+                  Collecting 8 points for <br />discount
+                </h2>
+                <p class="text-[#777] font-medium">
+                  There are many variations of passages of Lorem Ipsum
+                  available.
+                </p>
+                <div class="card-actions">
+                  <button class="font-bold">Read More</button>
+                </div>
+              </div>
+            </div>
+            <div class="shadow-xl card bg-base-100">
+              <figure>
+                <img class="w-full p-5" src="images/news-2.png" alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <p>Feb 05, 2027</p>
+                <h2 class="text-xl font-extrabold card-title">
+                  Collecting 8 points for <br />discount
+                </h2>
+                <p class="text-[#777] font-medium">
+                  There are many variations of passages of Lorem Ipsum
+                  available.
+                </p>
+                <div class="card-actions">
+                  <button class="font-bold">Read More</button>
+                </div>
+              </div>
+            </div>
+            <div class="shadow-xl card bg-base-100">
+              <figure>
+                <img class="w-full p-5" src="images/news-3.png" alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <p>Feb 05, 2027</p>
+                <h2 class="text-xl font-extrabold card-title">
+                  Collecting 8 points for <br />discount
+                </h2>
+                <p class="text-[#777] font-medium">
+                  There are many variations of passages of Lorem Ipsum
+                  available.
+                </p>
+                <div class="card-actions">
+                  <button class="font-bold">Read More</button>
                 </div>
               </div>
             </div>
