--- a/index.html
+++ b/index.html
@@ -353,6 +353,65 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer
+      class="p-32 bg-base-200 text-base-content bg-gradient-to-r from-[#FF00001A] to-[#FF89381A]"
+    >
+      <div
+        class="container flex flex-col items-center justify-between gap-3 mx-auto mb-24 lg:flex-row"
+      >
+        <img class="w-20" src="images/cup.png" alt="" />
+        <div
+          class="flex flex-col items-center gap-10 text-center lg:pr-32 lg:flex-row"
+        >
+          <h4 class="text-xl font-medium">Ready to get strated?</h4>
+          <button class="btn bg-gradient-to-l from-[#F00] to-[#FF8938]">
+            Get Started
+          </button>
+        </div>
+      </div>
+
+      <div
+        class="container flex flex-col justify-between gap-4 pr-32 mx-auto lg:flex-row"
+      >
+        <nav class="flex flex-col gap-4">
+          <h6 class="footer-title">Services</h6>
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav class="flex flex-col gap-4">
+          <h6 class="footer-title">Company</h6>
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav class="flex flex-col gap-4">
+          <h6 class="footer-title">Legal</h6>
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+        <form>
+          <h6 class="footer-title">
+            Subscribe to our <br />
+            newsletter
+          </h6>
+          <fieldset class="pt-2 form-control w-80">
+            <label class="label">
+              <span class="label-text">Email address</span>
+            </label>
+            <div class="join">
+              <input type="text" class="input join-item" />
+              <button class="btn join-item"></button>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+      <aside class="pt-20 text-center">
+        <p>Copyright © 2024 -[AHSAN] All right reserved</p>
+      </aside>
+    </footer>
   </body>
 </html>
