--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="bg-[#F5F5F5]">
     <header class="container mx-auto">
       <div class="hero">
         <div class="flex-col gap-10 hero-content lg:flex-row">
