Bug fixed for responsive

--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
     </main>
 
     <footer
-      class="p-32 bg-base-200 text-base-content bg-gradient-to-r from-[#FF00001A] to-[#FF89381A]"
+      class="pt-32 bg-base-200 text-base-content bg-gradient-to-r from-[#FF00001A] to-[#FF89381A]"
     >
       <div
-        class="container flex flex-col items-center justify-between gap-3 mx-auto mb-24 lg:flex-row"
+        class="flex flex-col items-center justify-between gap-3 mx-auto mb-24 max-w-7xl lg:flex-row"
       >
         <img class="w-20" src="images/cup.png" alt="" />
         <div
@@ -371,7 +371,7 @@
       </div>
 
       <div
-        class="container flex flex-col justify-between gap-4 pr-32 mx-auto lg:flex-row"
+        class="flex flex-col justify-between gap-4 p-5 mx-auto text-center lg:pr-32 max-w-7xl lg:flex-row"
       >
         <nav class="flex flex-col gap-4">
           <h6 class="footer-title">Services</h6>
@@ -393,14 +393,14 @@
           <a class="link link-hover">Privacy policy</a>
           <a class="link link-hover">Cookie policy</a>
         </nav>
-        <form>
+        <form class="flex flex-col items-center justify-center gap-4">
           <h6 class="footer-title">
             Subscribe to our <br />
             newsletter
           </h6>
-          <fieldset class="pt-2 form-control w-80">
-            <label class="label">
-              <span class="label-text">Email address</span>
+          <fieldset class="pt-2 form-control lg:w-80">
+            <label class="lg:label">
+              <span class="text-center label-text">Email address</span>
             </label>
             <div class="join">
               <input type="text" class="input join-item" />
